--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node_js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,9 +11,12 @@
   "dependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "es6-promise": "^4.2.5",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^5.4.0",
+    "node-fetch": "^2.3.0",
     "nodemon": "^1.18.9"
   }
 }
